# Starting_with_Cpp

./: .gitignore  CMakeLists.txt  README.md  asccii_colors  compile_debug.md  dependencies_and_build_tools.md  documentation.md  gtest.cc  main.cpp  uml_module_cpp00.drawio
cpp_module_00/: README_module00.md  uml_module_cpp00.drawio
cpp_module_00/ex00/: Makefile  megaphone.cpp
cpp_module_00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
cpp_module_00/ex02/: Account.cpp  Account.hpp  Makefile  tests.cpp
cpp_module_01/: Zombie.cpp  Zombie.hpp
cpp_module_01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
cpp_module_01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
cpp_module_01/ex02/: Makefile  main.cpp
cpp_module_01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
cpp_module_01/ex04/: Makefile  Replace.cpp  Replace.hpp  main.cpp  test
cpp_module_01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp_module_01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp_module_02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp_module_02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp_module_02/ex02/: Fixed.cpp  Fixed.hpp  Makefile
cpp_module_02/ex03/: Fixed.cpp  Makefile  Point.cpp  Point.hpp  bsp.cpp  main.cpp
cpp_module_02/subject/: explanation_ex_03.md
cpp_module_03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
cpp_module_03/ex01/: ClapTrap.cpp  ClapTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp_module_03/ex02/: FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.hpp  main.cpp
cpp_module_03/ex03/: ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp_module_04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
cpp_module_04/ex01/: Animal.hpp  Brain.cpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  main.cpp
cpp_module_04/ex02/: AAnimal.cpp  AAnimal.hpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongCat.hpp  main.cpp
cpp_module_04/ex03/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.cpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  Makefile  MateriaSource.cpp  MateriaSource.hpp  main.cpp
diagrams of cpp/: uml_cpp_00_to_cpp_04.drawio
diagrams_of_cpp/: uml_cpp_00_to_cpp_04.drawio
